updated documentation and guide for 0.60

--- a/example-site/includes/css/screen.css
+++ b/example-site/includes/css/screen.css
@@ -232,36 +232,36 @@ body img {
 	}
 
 	#api-browser blockquote tt {
-		font-family:Courier, mono;
+		font-family:Courier, monospace;
 	}
 	
 	#api-browser pre {
-		font-family:Courier, mono;
+		font-family:Courier, monospace;
 		margin-top:10px;
 		padding:10px;
-		font-size:10px;
+		font-size:11px;
 	}
 
 	/* Code Styling */
-
-	span.code {
-		font-family:Courier, mono;
-		font-size:12px;
-	}
-
+	
 	#content pre.code {
 		width:auto;
 		margin-top:10px;
 		padding:10px;
 		background:#333333;
 		border:1px solid #222222;
-		font-family:Courier, mono;
-		font-size:10px;
+		font-family:Courier, monospace;
+		font-size:11px;
 		color:#ffffff;
 	}
 	
+	span.code {
+		font-family:Courier, monospace;
+		font-size:12px;
+	}
+
 	#content h3.param {
-		font-family:Courier, mono;
+		font-family:Courier, monospace;
 		font-size:18px;
 		color:#005060;
 	}
@@ -495,4 +495,207 @@ body img {
 	float:left;
 	margin-left:5px;
 }
+
+/* Stylesheet generated from TextMate theme
+ *
+ * Night Coder
+ * 
+ *
+ */
+
+pre.textmate-source {
+	width:auto;
+	margin-top:10px;
+	padding:10px;
+	background:#222222;
+	border:1px solid #000000;
+	font-family:Courier,monospace;
+	font-size:11px;
+	color:#ffffff;
+	
+	line-height: 1.5em;
+	word-wrap: break-word;
+	white-space: pre;
+	white-space: pre-wrap;
+	white-space: -moz-pre-wrap;
+	white-space: -o-pre-wrap;
+}
+
+pre.textmate-source .linenum {
+	width: 75px;
+	padding: 0.1em 1em 0.2em 0;
+	color: #888;
+	background-color: #eee;
+}
+pre.textmate-source span {
+	padding-top: 0.2em;
+	padding-bottom: 0.1em;
+}
+/*pre.textmate-source ::selection {
+	background-color: #767676;
+}*/
+/* Text base */
+pre.textmate-source span.text {
+	color: #FFFFFF;
+	background-color: #333333;
+}
+
+pre.textmate-source.html_doc {
+	background-color: #333333;
+}
+
+/* Source base */
+pre.textmate-source span.source {
+	color: #FFFFFF;
+	background-color: #222222;
+}
+
+/* Comment */
+pre.textmate-source span.comment {
+	color: #c9fed9;
+}
+
+/* Constant */
+pre.textmate-source span.constant_numeric {
+	color: #FBF300;
+}
+
+/* Character constant */
+pre.textmate-source span.constant_character {
+	color: #FBF300;
+}
+
+/* Constant2 */
+pre.textmate-source span.constant_language {
+	color: #baddfe;
+}
+
+/* Storage type */
+pre.textmate-source span.storage_type {
+	color: #baddfe;
+}
+
+/* Language variable */
+pre.textmate-source span.variable_language {
+	color: #baddfe;
+}
+
+/* Storage type 2 */
+pre.textmate-source span.support_type_stdint_c {
+	color: #baddfe;
+}
+
+/* Support Type */
+pre.textmate-source span.support_type {
+	color: #FFFFFF;
+}
+
+/* LateX Support 1 */
+pre.textmate-source span.support_function_general_tex {
+	color: #FF8C7B;
+}
+
+/* LaTeX Support 2 */
+pre.textmate-source span.support_function_be_latex {
+	color: #FF8C7B;
+}
+
+/* LaTeX Support 3 */
+pre.textmate-source span.support_function_section_latex {
+	color: #FF8C7B;
+}
+
+/* LaTeX Support 4 */
+pre.textmate-source span.keyword_control_label_latex {
+	color: #FF8C7B;
+}
+
+/* LaTeX Support 5 */
+pre.textmate-source span.support_function_footnote_latex {
+	color: #FF8C7B;
+}
+
+/* Lisp Quote */
+pre.textmate-source span.entity_quote_lisp {
+	color: #FFFFFF;
+}
+
+/* Lisp Parens */
+pre.textmate-source span.entity_paren_lisp {
+	color: #BAC3BC;
+}
+
+/* Lisp Functions */
+pre.textmate-source span.entity_name_function_lisp, pre.textmate-source span.entity_name_functiondef_lisp {
+	color: #baddfe;
+}
+
+/* Lisp Params */
+pre.textmate-source span.storage_type_params_lisp {
+	color: #FFFFFF;
+}
+
+/* Keyword */
+pre.textmate-source span.keyword {
+	color: #baddfe;
+}
+
+/* Storage */
+pre.textmate-source span.storage {
+	color: #baddfe;
+}
+
+/* Pre-processor Line */
+pre.textmate-source span.other_preprocessor {
+	color: #FE67FF;
+}
+
+/* Pre-processor Directive */
+pre.textmate-source span.entity_name_preprocessor {
+	color: #F023F9;
+}
+
+/* Function name */
+pre.textmate-source span.entity_name_function {
+}
+
+/* Function argument */
+pre.textmate-source span.variable_parameter {
+}
+
+/* String */
+pre.textmate-source span.string {
+	color: #fef5b0;
+}
+
+/* Regular expression */
+pre.textmate-source span.string_regexp {
+	color: #CCCC33;
+}
+
+/* String (literal) */
+pre.textmate-source span.string_literal {
+	color: #CCCC33;
+}
+
+/* Class inheritance */
+pre.textmate-source span.entity_other_inherited-class {
+	text-decoration: underline;
+}
+
+/* Tag name */
+pre.textmate-source span.entity_name_tag {
+	text-decoration: underline;
+}
+
+/* Objc function override */
+pre.textmate-source span.support_function_any-method_objc {
+	color: #FFFFFF;
+}
+
+/* Objc function override 2 */
+pre.textmate-source span.support_function_any-method_name-of-parameter_objc {
+	color: #FFFFFF;
+}
+
 
