--- a/example-site/views/welcome.html
+++ b/example-site/views/welcome.html
@@ -36,7 +36,7 @@
 			<li>You love newLISP</li>
 			<li>And discovering new programming styles</li>
 		</ol>
-		<p>&nbsp;</p>
+		<p>Enter <%(link_to "the guide" "dragonfly_welcome")%> to get started!</p>
 		
 		<div class="line-dotted"></div>
 
