--- a/example-site/views/dragonfly_ajax-api.html
+++ b/example-site/views/dragonfly_ajax-api.html
@@ -4,7 +4,7 @@
 (let (path ($POST "path"))
 	; security check! make sure they ain't asking
 	; for something they shouldn't be asking for!
-	(if (and (find dragonfly-api-directory path) (ends-with path ".html"))
+	(if (and (find "dragonfly-api" path) (not (find "../" path)) (ends-with path ".html"))
 		(include path)
 		(die "bad path: " path)
 	)
