--- a/example-site/views/dragonfly_getpost.html
+++ b/example-site/views/dragonfly_getpost.html
@@ -30,14 +30,14 @@
 		<p>
 			For example, if we wanted to retrieve the value of the GET parameter "foo", we would write:
 		</p>
-		<pre class="code">($GET "foo")</pre>
+		<pre class="textmate-source"><span class="source source_newlisp"><span class="entity entity_paren entity_paren_lisp">(</span><span class="entity entity_name entity_name_function entity_name_function_lisp">$GET</span> <span class="string string_quoted string_quoted_double string_quoted_double_lisp"><span class="punctuation punctuation_definition punctuation_definition_string punctuation_definition_string_begin punctuation_definition_string_begin_lisp">"</span>foo<span class="punctuation punctuation_definition punctuation_definition_string punctuation_definition_string_end punctuation_definition_string_end_lisp">"</span></span><span class="entity entity_paren entity_paren_lisp">)</span></span></pre>
 		<p>
 			This box shows the value of "foo":
 		</p>
 		<div class="resultbox" id="foo-result"><%=($GET "foo")%></div>
 		<% (if-not ($GET "foo") (begin %>
 		<p>
-			It's currently <span class="code">nil</span> because no GET parameter "foo" has been set. Click <%(link_to "this link" (string viewname "?foo=bar"))%> to set its value to <span class="code">bar</span>.
+			It's currently <span class="code">nil</span> because no GET parameter "foo" has been set. Click <%(link_to "this link" (string DF_PAGE "?foo=bar"))%> to set its value to <span class="code">bar</span>.
 		</p>
 		<% ) %>
 		<script type="text/javascript" charset="utf-8">
@@ -58,8 +58,8 @@
 			However, normally only the last value of <span class="code">bar</span> is accepted. To get the entire list of values append <b>[]</b> to the end of the variable name, like this:
 		</p>
 		<p><span class="code">GET /form.cgi?bar[]=1&bar[]=2</span></p>
-		<pre class="code">($GET "bar[]")
-=> (1 2)</pre>
+		<pre class="textmate-source"><span class="source source_newlisp"><span class="entity entity_paren entity_paren_lisp">(</span><span class="entity entity_name entity_name_function entity_name_function_lisp">$GET</span> <span class="string string_quoted string_quoted_double string_quoted_double_lisp"><span class="punctuation punctuation_definition punctuation_definition_string punctuation_definition_string_begin punctuation_definition_string_begin_lisp">"</span>bar[]<span class="punctuation punctuation_definition punctuation_definition_string punctuation_definition_string_end punctuation_definition_string_end_lisp">"</span></span><span class="entity entity_paren entity_paren_lisp">)</span>
+<span class="comment comment_line comment_line_semicolon comment_line_semicolon_lisp"><span class="punctuation punctuation_definition punctuation_definition_comment punctuation_definition_comment_lisp">;</span>=&gt; (1 2)</span></span></pre>
 		<p>
 			One prominent example is a form that contains a select box that allows multiple selections. Like this one:
 		</p>
@@ -69,7 +69,7 @@
 		</p>
 		<div style="width:200px; margin-top: 10px">
 			<a name="multi"></a>
-			<form action="<%=(web-root (string viewname "#multi"))%>" method="post">
+			<form action="<%=(string DF_PAGE "#multi")%>" method="post">
 				<select name="foo[]" multiple="yes" style="width:100%">
 					<option value="option1">option1</option>
 					<option value="option2">option2</option>
