--- a/example-site/views/dragonfly_smtp_api.html
+++ b/example-site/views/dragonfly_smtp_api.html
@@ -23,7 +23,7 @@
 		</div>
 		
 		<!-- This inserts a div with id #api-browser -->
-		<% (api-browser "dragonfly-api") %>
+		<% (api-browser "dragonfly-api/SMTP") %>
 		
 		<div class="line-dotted"></div>
 
