--- a/example-site/views/setup_example.html
+++ b/example-site/views/setup_example.html
@@ -40,10 +40,10 @@
 
 		<p>In <span class="code">example-site/dragonfly-framework</span> you'll find the file <b>config.lsp</b>.<br/>Change this line:</p>
 
-			<pre class="code">(constant (global 'DOCUMENT_ROOT) (env "DOCUMENT_ROOT"))</pre>
+			<pre class="textmate-source"><span class="source source_newlisp"><span class="entity entity_paren entity_paren_lisp">(</span><span class="entity entity_name entity_name_function entity_name_function_lisp">constant</span> <span class="entity entity_paren entity_paren_lisp">(</span><span class="entity entity_name entity_name_function entity_name_function_lisp">global</span> '<span class="entity entity_symbol entity_symbol_lisp">DOCUMENT_ROOT</span><span class="entity entity_paren entity_paren_lisp">)</span> <span class="entity entity_paren entity_paren_lisp">(</span><span class="entity entity_name entity_name_function entity_name_function_lisp">env</span> <span class="string string_quoted string_quoted_double string_quoted_double_lisp"><span class="punctuation punctuation_definition punctuation_definition_string punctuation_definition_string_begin punctuation_definition_string_begin_lisp">"</span>DOCUMENT_ROOT<span class="punctuation punctuation_definition punctuation_definition_string punctuation_definition_string_end punctuation_definition_string_end_lisp">"</span></span><span class="entity entity_paren entity_paren_lisp">))</span></span></pre>
 			<p>To:</p>
-			<pre class="code">(constant (global 'DOCUMENT_ROOT)
-          "/home/user/mysite.com/dragonfly/example-site")</pre>
+			<pre class="textmate-source"><span class="source source_newlisp"><span class="entity entity_paren entity_paren_lisp">(</span><span class="entity entity_name entity_name_function entity_name_function_lisp">constant</span> <span class="entity entity_paren entity_paren_lisp">(</span><span class="entity entity_name entity_name_function entity_name_function_lisp">global</span> '<span class="entity entity_symbol entity_symbol_lisp">DOCUMENT_ROOT</span><span class="entity entity_paren entity_paren_lisp">)</span>
+          <span class="string string_quoted string_quoted_double string_quoted_double_lisp"><span class="punctuation punctuation_definition punctuation_definition_string punctuation_definition_string_begin punctuation_definition_string_begin_lisp">"</span>/home/user/mysite.com/dragonfly/example-site<span class="punctuation punctuation_definition punctuation_definition_string punctuation_definition_string_end punctuation_definition_string_end_lisp">"</span></span><span class="entity entity_paren entity_paren_lisp">)</span></span></pre>
 
 		<h3 class="code">Step 3 (optional): newLISP outside from /usr/bin/</h3>
 		<p>
@@ -52,9 +52,9 @@
 		(for example: /path/to/bin/newlisp), then you may need to also
 		edit <b>index.cgi</b> file and change the top line from:</p>
 
-		<pre class="code">#!/usr/bin/env newlisp</pre>
+		<pre class="textmate-source"><span class="source source_newlisp"><span class="comment comment_line comment_line_semicolon comment_line_semicolon_lisp"><span class="punctuation punctuation_definition punctuation_definition_comment punctuation_definition_comment_lisp">#</span>!/usr/bin/env newlisp</span></span></pre>
 		<p>To:</p>
-		<pre class="code">#!/path/to/bin/newlisp</pre>
+		<pre class="textmate-source"><span class="source source_newlisp"><span class="comment comment_line comment_line_semicolon comment_line_semicolon_lisp"><span class="punctuation punctuation_definition punctuation_definition_comment punctuation_definition_comment_lisp">#</span>!/path/to/bin/newlisp</span></span></pre>
 
 		<div class="line-dotted"></div>
 
